Change the word Posts on front-end to Articles

--- a/Blog/templates/Blog/post_list_latest.html
+++ b/Blog/templates/Blog/post_list_latest.html
@@ -1,4 +1,4 @@
 {% extends "post_list_generic.html" %}
 {% block topcontent %}
-    <legend class="heading">Latest Posts</legend>
+    <legend class="heading">Latest Articles</legend>
 {% endblock topcontent %}
