--- a/Blog/templates/Blog/post_list_category.html
+++ b/Blog/templates/Blog/post_list_category.html
@@ -1,4 +1,4 @@
 {% extends "post_list_generic.html" %}
 {% block topcontent %}
-    <legend class="heading"> Posts under the category {{category|title}} </legend>
+    <legend class="heading"> Articles under the category {{category|title}} </legend>
 {% endblock topcontent %}
