* remove class heading, it makes the first link align to the top, as written in javascipt for homepage to display view-more link on large-screen devices * change the look of tag as everywhere in the site * shorten instructions

--- a/Blog/templates/Blog/post_tagged.html
+++ b/Blog/templates/Blog/post_tagged.html
@@ -1,5 +1,5 @@
 {% extends "post_list_generic.html" %}
 {% block topcontent %}
-    <legend class="heading">Posts tagged with {{tag|title}}</legend>
+    <legend>Articles tagged with the tag&nbsp;<span class="article-tags">{{ tag }}</span></legend>
     {% comment %} <h3 class="mb-3">Total Posts ({{ page_obj.paginator.count }})</h3> {% endcomment %}
 {% endblock topcontent %}
