--- a/Blog/templates/Blog/user_bookmarks.html
+++ b/Blog/templates/Blog/user_bookmarks.html
@@ -1,8 +1,9 @@
 {% extends "post_list_generic.html" %}
 {% block topcontent %}
 {% if page_obj.paginator.count %}
-    <legend class="heading">Total Bookmarked Posts ({{ page_obj.paginator.count }})</legend>
+<legend>Total Bookmarked articles ({{ page_obj.paginator.count }})</legend>
 {% else %}
-    <legend class="heading"> You are yet to bookmark a post. You might want to go back <a href="{% url 'Blog:home' %}" title="Home">reading.</a>.</legend>
+<legend>No bookmarks here. You might want to get back to <a href="{% url 'Blog:home' %}" title="Home"> reading</a>. </legend>
+
 {% endif %}
 {% endblock topcontent %}
