--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -190,6 +190,11 @@ a.article-title:hover {
     display: inline;
 }
 
+.article-short-des {
+    display: inline;
+    overflow-wrap: break-word;
+}
+
 .article-content {
     white-space: pre-line;
     overflow-wrap: break-word;
