--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -3,6 +3,7 @@ body {
     color: #333333;
     margin-top: 5rem;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    overflow-wrap: break-word;
 }
 
 a {
