--- a/Blog/templates/Blog/footer.html
+++ b/Blog/templates/Blog/footer.html
@@ -45,7 +45,7 @@
         </div>
         <div class="col">
             <div class="made-with-love">
-            <h6>Made with ❤️ from Tetarpur</h6>
+            <h6>Made with <i class="fa fa-heart"></i> from Tetarpur</h6>
             </div>
         </div>
     </div>
