Remove those categories that we don't have content for

--- a/Blog/templates/Blog/about.html
+++ b/Blog/templates/Blog/about.html
@@ -10,8 +10,8 @@
          <a href="{% url 'Blog:categorised' 'programming'%}" title="Article under the category Programming">Programming</a>,
          <a href="{% url 'Blog:categorised' 'robotics'%}" title="Article under the category Robotics">Robotics</a>,
          <a href="{% url 'Blog:categorised' 'artificial-intelligence'%}" title="Article under the category Artificial Intelligence">Artificial Intelligence,
-         <a href="{% url 'Blog:categorised' 'augumented-reality'%}" title="Article under the category Augumented Reality">Augmented Reality</a>, 
-         <a href="{% url 'Blog:categorised' 'games'%}" title="Article under the category Games">Games</a>, 
+         {% comment %} <a href="{% url 'Blog:categorised' 'augumented-reality'%}" title="Article under the category Augumented Reality">Augmented Reality</a>,  {% endcomment %}
+         {% comment %} <a href="{% url 'Blog:categorised' 'games'%}" title="Article under the category Games">Games</a>,  {% endcomment %}
          and many more. Most articles will fall under the real of  <a href="some hackadda articles about STEAM" title="Science, Technology, Engineering, Arts and Mathematics">STEAM</a>(Science, Technology, Engineering, Arts and Mathematics).
     </p>
 
