stick footer to the bottom

--- a/Blog/templates/Blog/footer.html
+++ b/Blog/templates/Blog/footer.html
@@ -1,4 +1,4 @@
-<footer class="container-fluid">
+<footer class="container-fluid mt-auto">
     <div class="row">
         <div class="col">
             <div class="subscription">
