--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -1,3 +1,5 @@
+@import url("ckeditor_styles.css");
+
 html,
 body {
     height: 100%;
@@ -158,6 +160,7 @@ a.dropdown-toggle {
 .article-image {
     max-width: 60%;
     margin: auto;
+    margin-bottom: 1rem;
 }
 
 .article-image>img {
@@ -210,7 +213,7 @@ a.article-title:hover {
 }
 
 .article-content {
-    white-space: pre-line;
+    /* white-space: pre-line; */
     overflow-wrap: break-word;
 }
 
