white space is already added by ckeditor

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -210,7 +210,7 @@ a.article-title:hover {
 }
 
 .article-content {
-    white-space: pre-line;
+    /* white-space: pre-line; */
     overflow-wrap: break-word;
 }
 
