Add import for styling of ckeditor generated content

--- a/Blog/templates/Blog/post_preview.html
+++ b/Blog/templates/Blog/post_preview.html
@@ -1,5 +1,11 @@
 {% extends "Blog/base.html" %}
 {% load cool_view %}
+{% block extrahead %}
+<link rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/highlightjs-themes@1.0.0/monokai_sublime.css">
+<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+{% endblock extrahead %}
 {% block content %}
 <div id="article-share-container">
     <div id="share">
