--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -2,9 +2,10 @@
 {% load static from staticfiles %}
 {% load cool_view %}
 {% block extrahead %}
-<script>window.CKEDITOR_BASEPATH = "{% static '/ckeditor/ckeditor/' %}";</script>
-<script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}" data-ckeditor-basepath="{% static 'ckeditor/ckeditor/' %}" id="ckeditor-init-script"></script>
-<script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
+<link rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/highlightjs-themes@1.0.0/monokai_sublime.css">
+<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
 {% endblock extrahead %}
 {% block content %}
 <div id="article-share-container">
@@ -38,7 +39,7 @@
                 <div class="article-image">
                     <img src="{{post.image.url}}" alt="{{post.title}}">
                 </div>
-                <p class="article-content">{{ post.content|safe }}</p>
+                <div class="article-content">{{ post.content|safe }}</div>
                 {% include "tags.html" with tags=post.get_tags_list %}
             </div>
         </article>
