Ensure consistency of background-color on different browser(tested chrome)

--- a/Blog/static/Blog/main.css
+++ b/Blog/static/Blog/main.css
@@ -644,13 +644,18 @@ a.article-title:hover {
 
 ::selection {
     color: white;
-    background-color: gray;
+    background-color: #808080fe;
+}
+
+::-webkit-selection {
+    background-color: #808080fe;
+    color: white;
 }
 
 ::-moz-selection {
     /* Code for Firefox */
     color: white;
-    background-color: gray;
+    background-color: #808080fe;
 }
 
 #socialIcons .fa {
