--- a/Blog/templates/Blog/post_preview.html
+++ b/Blog/templates/Blog/post_preview.html
@@ -18,7 +18,7 @@
             <div class="media-body">
                 <div class="article-metadata">
                     <div class="article-title">
-                        <h2>{{ post.title }}</h2>
+                        <h1>{{ post.title }}</h1>
                     </div>
                     <div class="article-info">
                         <a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}" title="{{post.author.get_full_name}}">{{ post.author.get_full_name|title|truncatechars:'30' }}</a>
@@ -49,7 +49,7 @@
     {% csrf_token %}
     <div class="form-group">
         {% comment %} <a class="btn btn-info" href="{% url 'Blog:post-update' post.date_published.year post.date_published.month post.date_published.day post.slug %}" title="Get back to edit">Get back to edit</a> {% endcomment %}
-        <button class="btn btn-info ml-auto mr-auto" type="submit">Submit for review</button>
+        <button class="btn btn-info ml-auto mr-auto" style="display:block;" type="submit">Submit for review</button>
     </div>
 </form>
 {% endblock content %}
