correct spelling of village

--- a/Blog/templates/Blog/footer.html
+++ b/Blog/templates/Blog/footer.html
@@ -46,7 +46,7 @@
         </div>
         <div class="col">
             <div class="made-with-love">
-                <h6>Made with <i class="fa fa-heart"></i> from Tetarpur</h6>
+                <h6>Made with <i class="fa fa-heart"></i> from Tatarpur, Saidpur</h6>
             </div>
         </div>
     </div>
