--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -39,6 +39,17 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="{% static 'Blog/main.js' %}"></script>
         <script>window.CSRF_TOKEN="{{ csrf_token }}"</script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156068094-1"></script>
+        <script>
+        if (document.location.hostname.search("hackadda.com") !== -1) {
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-156068094-1');
+        }
+        </script>
         {% block extrahead %}
         {% endblock extrahead %}
     </head>
