--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -1,5 +1,6 @@
 {% load static from staticfiles %}
 {% load meta %}
+{% load extra_auth %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -80,7 +81,7 @@
                                 <div class="dropdown-menu">
                                     <p class="ml-3 mb-0">Signed in as <strong>{{user.username}}</strong><p>
                                     <a class="nav-item nav-link" href="{% url 'profile' %}" title="Edit profile">Edit Profile</a>
-                                    {% if user.is_staff %}
+                                    {% if user|has_group:"editor" %}
                                     <a class="nav-item nav-link" href="{% url 'Blog:post-create' %}" title="New Post">New Post</a>
                                     <a class="nav-item nav-link" href="{% url 'Blog:my-posts' user %}" title="My Post">My Posts</a>
                                     <a class="nav-item nav-link" href="#" title="">Drafts</a>
