add option to save as draft

--- a/Blog/templates/Blog/post_form.html
+++ b/Blog/templates/Blog/post_form.html
@@ -11,7 +11,8 @@
         </fieldset>
         <div class="form-group">
             {% comment %} <button class="btn btn-outline-info" type="submit">Preview your post</button> {% endcomment %}
-            <button class="btn btn-outline-info ml-2" type="submit">Submit for review</button>            
+            <button id="draft" class="btn btn-outline-info ml-2 mr-2" name="draft" value="Draft" type="submit">Save Draft</button>            
+            <button id="submit" class="btn btn-outline-info ml-2 mr-1" name="queue" value="Queue" type="submit">Submit for review</button>            
         </div>
     </form>
 </div>
