--- a/Blog/templates/Blog/post_form.html
+++ b/Blog/templates/Blog/post_form.html
@@ -12,7 +12,7 @@
         <div class="form-group">
             {% comment %} <button class="btn btn-outline-info" type="submit">Preview your post</button> {% endcomment %}
             <button id="draft" class="btn btn-outline-info ml-2 mr-2" name="draft" value="Draft" type="submit">Save Draft</button>            
-            <button id="submit" class="btn btn-outline-info ml-2 mr-1" name="queue" value="Queue" type="submit">Submit for review</button>            
+            <button id="submit" class="btn btn-outline-info ml-2 mr-1" name="preview" value="Preview" type="submit">Preview</button>            
         </div>
     </form>
 </div>
